# prolite

./: .gitignore  Cargo.toml  Makefile.am  box_types.c  box_types.h  builtin_strings.h  clause.c  clause.h  configure.ac  context.c  context.h  interpreter.c  parser.c  prepare.c  prolite.h  read_term.c  stack.c  stack.h  strings.c  throw.h  types.h  vm.c
build-aux/: git-version-gen.sh
include/: prolite.h
lib/: box_types.h  btree.c  btree.h  builtin_exprs.h  builtin_functions  builtin_functions.h  builtin_strings  builtin_strings.h  builtins.c  builtins.h  char_conv.c  clause.c  clause.h  compile.c  compile.h  compile_expr.c  consult.c  context.c  context.h  copy_stuff.c  dump_cfg.c  exception.c  exceptions.c  export.h  fnv1a.h  heap.c  heap.h  interpreter.c  module.c  operators.c  packed_types.h  parser.c  parser.h  predicates.c  predicates.h  prolite.c  setjmp.h  stack.c  stack.h  stream.c  (+9 more)
m4/: prolite_prog_cc.m4
old/: clause.c  context.c  exception.c  interpreter.c  module.c  parser.c  prolite.h
src/: consult.c  consult.rs  context.rs  error.rs  flags.rs  fs_resolver.c  interpret.rs  lib.rs  main.c  main.rs  operators.rs  parser.rs  prolog_flags.rs  read_term.rs  settings.c  settings.h  stream.rs  term.rs
src/consult/: builtins.rs  error.rs  mod.rs  multireader.rs  multistream.rs  program.rs  test.rs  text.rs
src/interpret/: arithmetic.rs  builtins.rs  call.rs  char_codes.rs  copy_term.rs  findall.rs  flags.rs  frame.rs  functor.rs  mod.rs  setof.rs  solve.rs  term.rs  test.rs  throw.rs  univ.rs  user_defined.rs  write.rs
src/read_term/: consult.rs  error.rs  lexer.rs  mod.rs  multistream.rs  parser.rs  stream.rs  term.rs  test.rs  token.rs  utf8reader.rs
test/: test.pl
test/internal/: btree_tests.c
test/iso/: test_call.pl  test_conjunction.pl  test_cut.pl  test_disjunction.pl  test_if_then.pl
test/vanilla/: direct2.pl  sec74.pl  sec78.pl  sec88.pl  vanilla.pl
